Removed bg-attach on mobile/tablet, to account for iOS safari not being a fan of bg attachment fixed

--- a/style.css
+++ b/style.css
@@ -2792,6 +2792,14 @@ ul.page-numbers .next { right: 0; }
 @media ( max-width: 1100px ) {
 
 
+	/* Element Base ---------------------------- */
+
+
+	.bg-attach {
+		background-attachment: initial;
+	}
+
+
 	/* Structure ---------------------------- */
 
 
